--- a/backend/package.json
+++ b/backend/package.json
@@ -24,28 +24,28 @@
   "author": "Triboar Guild",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.5",
+    "bull": "^4.11.5",
+    "cors": "^2.8.5",
+    "discord.js": "^14.14.0",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "dotenv": "^16.4.5",
-    "pg": "^8.11.3",
-    "stripe": "^14.10.0",
-    "discord.js": "^14.14.0",
-    "axios": "^1.6.5",
-    "jsonwebtoken": "^9.1.2",
-    "cors": "^2.8.5",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "uuid": "^9.0.1",
-    "bull": "^4.11.5",
+    "pg": "^8.11.3",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^10.3.1",
     "redis": "^4.6.12",
-    "pino": "^8.17.2",
-    "pino-http": "^8.6.1"
+    "stripe": "^14.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "stripe-mock": "^0.12.3"
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
   }
 }
