--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://adamhstewart.github.io/triboar-site/'
+baseURL = '/'
 languageCode = 'en-us'
 title = 'Triboar Guildhall — Westmarches D&D Community'
