--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,3 +1,9 @@
 baseURL = '/'
 languageCode = 'en-us'
 title = 'Triboar Guildhall — Westmarches D&D Community'
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.parser]
+      [markup.goldmark.parser.attribute]
+        block = true
