--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,6 +1,7 @@
 baseURL = '/'
 languageCode = 'en-us'
 title = 'Triboar Guildhall — Westmarches D&D Community'
+enableRobotsTXT = true
 
 [params]
   description = "A play-by-post Westmarches D&D community set in the Forgotten Realms. Join collaborative storytelling, fair membership, and flexible asynchronous play."
